<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.ohmerhe.flowlayout.demo.MainActivity">

    <com.ohmerhe.flowlayout.ExpandableFlowLayout
        android:id="@+id/flowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8f8f8"
        app:maxRows="3"
        app:childSpacing="auto"
        app:rowSpacing="8dp"/>

    <com.ohmerhe.flowlayout.ExpandableFlowLayout
        android:id="@+id/flowLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#f8f8f8"
        app:childSpacing="auto"
        app:childSpacingForLastRow="align"
        app:rowSpacing="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_tag"
            android:textColor="@color/tag_color"
            android:text="@string/tag0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_tag"
            android:textColor="@color/tag_color"
            android:text="@string/tag1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_tag"
            android:textColor="@color/tag_color"
            android:text="@string/tag2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_tag"
            android:textColor="@color/tag_color"
            android:text="@string/tag3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_tag"
            android:textColor="@color/tag_color"
            android:text="@string/tag4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_tag"
            android:textColor="@color/tag_color"
            android:text="@string/tag5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_tag"
            android:textColor="@color/tag_color"
            android:text="@string/tag6"/>

    </com.ohmerhe.flowlayout.ExpandableFlowLayout>
</LinearLayout>
